# discord-mpris-rs

./: .env  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: main.rs
systemd/: discord-mpris-rs.service
