[package]
name = "discord-mpris-rs"
version = "0.2.4"
edition = "2024"
description = "Discord Rich Presence for MPRIS media players"
license = "0BSD"
readme = "README.md"
repository = "https://github.com/meganekkogekirabu/discord-mpris-rs"

[dependencies]
discordipc = "0.1.1"
dotenv = "0.15.0"
mpris = "2.0.1"
musicbrainz_rs = "0.10.2"
once_cell = "1.21.3"
regex = "1.11.1"
thiserror = "2.0.12"
tokio = "1.46.0"

[profile.release]
opt-level = 3
debug = false
lto = true